--- a/users/templates/new_user.html
+++ b/users/templates/new_user.html
@@ -14,26 +14,19 @@
   <h2>Get Account</h2>
   <form action="{% url 'new_user' %}" method="POST">
     {% csrf_token %}
-    <div class="form-group">
-      <label for="{{ form.login.id_for_label }}">Login:</label>
-      {{ form.login }}
-      {{ form.login.errors }}
-    </div>
-    <div class="form-group">
-      <label for="{{ form.email.id_for_label }}">Email:</label>
-      {{ form.email }}
-      {{ form.email.errors }}
-    </div>
-    <div class="form-group">
-      <label for="{{ form.password.id_for_label }}">Password:</label>
-      {{ form.password }}
-      {{ form.password.errors }}
-    </div>
-    <div class="form-group">
-      <label for="{{ form.rpassword.id_for_label }}">Repeat password:</label>
-      {{ form.rpassword }}
-      {{ form.rpassword.errors }}
-    </div>
+    {% for field in form %}
+      <div class="form-group">
+        <label for="{{ field.id_for_label }}">{{ field.label_tag }}</label>
+        {{ field }}
+        {% if field.errors %}
+        <br>
+        <div class="alert alert-danger">
+          {{field.errors}}
+        </div>
+        {% endif %}
+      </div>
+    {% endfor %}
+    
     <div class="checkbox">
       <label><input type="checkbox" name="remember"> Accept <a href="" style="color: rgb(41, 41, 41);">privacy</a></label>
     </div>
