--- a/users/templates/login_user.html
+++ b/users/templates/login_user.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,6 +31,7 @@
     {% endfor %}
     {% endif %}
     <button type="submit" class="btn btn-default">Login</button>
+    <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-default">With Google</button></a>
   </form>
 </div>
 
