--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,1 +1,58 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="">MySite</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="">Home</a></li>
+      <li><a href="{% url 'login_user' %}">Sing in</a></li>
+      <li><a href="{% url 'new_user' %}">Sign up</a></li>
+      <li><a href="{% url 'logout' %}">Logout</a></li>
+    </ul>
+  </div>
+</nav>
+  
+<div class="container">
+  <h3>Hello World</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore 
+        magna aliqua. Vehicula ipsum a arcu cursus vitae congue 
+        mauris rhoncus aenean. Dictum at tempor commodo ullamcorper
+         a lacus vestibulum. Nunc mi ipsum faucibus vitae aliquet
+          nec. Adipiscing enim eu turpis egestas pretium aenean 
+          pharetra magna. Et molestie ac feugiat sed lectus. Sollicitudin
+           tempor id eu nisl nunc. Aliquam eleifend mi in nulla.
+            Duis ut diam quam nulla porttitor massa id. Sed vulputate
+             odio ut enim blandit volutpat. Gravida in fermentum et
+              sollicitudin ac orci. Consequat mauris nunc congue nisi vitae.
+    Dignissim sodales ut eu sem integer vitae. Facilisis mauris sit
+     amet massa vitae tortor condimentum. Ullamcorper a lacus vestibulum sed arcu.
+      Faucibus et molestie ac feugiat. Erat nam
+       at lectus urna duis convallis convallis tellus id. Elit ut
+        aliquam purus sit. Eget egestas purus viverra accumsan. Tortor aliquam
+         nulla facilisi cras fermentum odio eu. Adipiscing vitae proin sagittis nisl
+          rhoncus mattis. Tellus elementum sagittis vitae et
+           leo duis. Fermentum leo vel orci porta non pulvinar neque.
+            Aliquet bibendum enim facilisis gravida neque convallis a cras semper. Faucibus nisl
+             tincidunt eget nullam. Cursus eget nunc
+              scelerisque viverra mauris in aliquam. Purus ut faucibus
+               pulvinar elementum integer enim neque volutpat ac.
+                Nascetur ridiculus mus mauris vitae ultricies leo integer
+                . A scelerisque purus semper eget.</p>
+
+</div>
+
+</body>
+</html>
