--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -20,6 +20,7 @@
       <li><a href="{% url 'login_user' %}">Sing in</a></li>
       <li><a href="{% url 'new_user' %}">Sign up</a></li>
       <li><a href="{% url 'logout' %}">Logout</a></li>
+      <li><a href="{% url 'change_pass' %}">Change password</a></li>
     </ul>
   </div>
 </nav>
