--- a/home/templates/account/password_change.html
+++ b/home/templates/account/password_change.html
@@ -1,17 +1,36 @@
 {% load i18n %}
-
-<div class="container-fluid">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
    
     <h3 class="h3" id="head_banner">{% trans "Change Password" %}</h3>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="container-fluid text-center" id="change_password_form">
+    <form method="POST" action="" id="change_password_form">
         {% csrf_token %}
-        {{ form.oldpassword.label }}
-        {{ form.oldpassword }}<br><br>
-        {{ form.password1.label }}
-        {{ form.password1 }}<br><br>
-        {{ form.password2.label }}
-        {{ form.password2 }}<br><br>
-        <button class="btn btn-outline-info" type="submit" name="action">{% trans "Change Password" %}</button>
+        {% for field in form %}
+        <div class="form-group">
+          {{ field.label_tag }}
+          {{ field }}
+          {% if field.errors %}
+          <br>
+          <div class="alert alert-danger">
+            {{field.errors}}
+          </div>
+          {% endif %}
+        </div>
+      {% endfor %}
+    <button class="btn btn-default" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
  </div>
+
+</body>
+</html>
