good view for home page
inheritance is used for templates, all pages is distinguished on navbar

--- a/home/templates/account/password_change.html
+++ b/home/templates/account/password_change.html
@@ -1,17 +1,11 @@
+{% extends "base.html" %}
 {% load i18n %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+
+
+{% block content %}
 <div class="container">
    
+    
     <h3 class="h3" id="head_banner">{% trans "Change Password" %}</h3>
 
     <form method="POST" action="" id="change_password_form">
@@ -31,6 +25,4 @@
     <button class="btn btn-default" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
  </div>
-
-</body>
-</html>
+{% endblock %}
