--- a/users/templates/login_user.html
+++ b/users/templates/login_user.html
@@ -1,18 +1,8 @@
-{% load socialaccount %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/login_user.css' %}">
-</head>
-<body>
+{% extends "base.html" %}
 
+
+{% load socialaccount %}
+{% block content %}
 <div class="container" >
   <h2>Log in</h2>
   <form action="{% url 'login_user' %}" method="POST">
@@ -34,6 +24,4 @@
     <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-default">With Google</button></a>
   </form>
 </div>
-
-</body>
-</html>
+{% endblock %}
