forgot password functionality added
all pages customized and all forms customized, but for all this stuff whole urls and views were imported into project from allauth. next point for commit is to refactor whole code for managing accounts
also dotenv is using for storage email pass and sekret key

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -32,6 +32,11 @@
       {% else %}
       <li><a href="{% url 'sign_up_n' %}">Sign up</a></li>
       {% endif %}
+      {% if active_page == "reset_password" %}
+      <li class="active"><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
+      {% else %}
+      <li><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
+      {% endif %}
       {% endif %}
       {% if user_authenticated %}
       {% if active_page == "change_password" %}
