--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home_n' %}">MySite</a>
+      <a class="navbar-brand" href="{% url 'home_n' %}">LinkOl</a>
     </div>
     <ul class="nav navbar-nav">
       {% if active_page == "home" %}
@@ -46,6 +46,13 @@
       {% endif %}
       <li class="float-right"><a href="{% url 'logout_n' %}">Logout</a></li>
       {% endif %}
+      <form class="navbar-form navbar-left" action="/home/" method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+          <input type="text" name="name" class="form-control" placeholder="Search playlist">
+        </div>
+        <button type="submit" class="btn btn-default">Seacrh</button>
+      </form>  
     </ul>
   </div>
 </nav>
