--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -10,56 +10,65 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home_n' %}">LinkOl</a>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="{% url 'home_n' %}">LinkOl</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          {% if active_page == "home" %}
+          <li class="active"><a href="{% url 'home_n' %}">Home</a></li>
+          {% else %}
+          <li><a href="{% url 'home_n' %}">Home</a></li>
+          {% endif %}
+          {% if not user_authenticated %}
+          {% if active_page == "sign_in" %}
+          <li class="active"><a href="{% url 'sign_in_n' %}">Sing in</a></li>
+          {% else %}
+          <li><a href="{% url 'sign_in_n' %}">Sing in</a></li>
+          {% endif %}
+          {% if active_page == "sign_up" %}
+          <li class="active"><a href="{% url 'sign_up_n' %}">Sign up</a></li>
+          {% else %}
+          <li><a href="{% url 'sign_up_n' %}">Sign up</a></li>
+          {% endif %}
+          {% if active_page == "reset_password" %}
+          <li class="active"><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
+          {% else %}
+          <li><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
+          {% endif %}
+          {% endif %}
+          {% if user_authenticated %}
+          {% if active_page == "change_password" %}
+          <li class="active"><a href="{% url 'change_password_n' %}">Change password</a></li>
+          {% else %}
+          <li><a href="{% url 'change_password_n' %}">Change password</a></li>
+          {% endif %}
+          <li class="float-right"><a href="{% url 'logout_n' %}">Logout</a></li>
+          {% endif %}
+          <form class="navbar-form navbar-left" action="/home/" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+              <input type="text" name="name" class="form-control" placeholder="Search playlist">
+            </div>
+            <button type="submit" class="btn btn-default">Seacrh</button>
+          </form>  
+        </ul>
+      </div>
     </div>
-    <ul class="nav navbar-nav">
-      {% if active_page == "home" %}
-      <li class="active"><a href="{% url 'home_n' %}">Home</a></li>
-      {% else %}
-      <li><a href="{% url 'home_n' %}">Home</a></li>
-      {% endif %}
-      {% if not user_authenticated %}
-      {% if active_page == "sign_in" %}
-      <li class="active"><a href="{% url 'sign_in_n' %}">Sing in</a></li>
-      {% else %}
-      <li><a href="{% url 'sign_in_n' %}">Sing in</a></li>
-      {% endif %}
-      {% if active_page == "sign_up" %}
-      <li class="active"><a href="{% url 'sign_up_n' %}">Sign up</a></li>
-      {% else %}
-      <li><a href="{% url 'sign_up_n' %}">Sign up</a></li>
-      {% endif %}
-      {% if active_page == "reset_password" %}
-      <li class="active"><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
-      {% else %}
-      <li><a href="{% url 'reset_password_n' %}">Forgot password</a></li>
-      {% endif %}
-      {% endif %}
-      {% if user_authenticated %}
-      {% if active_page == "change_password" %}
-      <li class="active"><a href="{% url 'change_password_n' %}">Change password</a></li>
-      {% else %}
-      <li><a href="{% url 'change_password_n' %}">Change password</a></li>
-      {% endif %}
-      <li class="float-right"><a href="{% url 'logout_n' %}">Logout</a></li>
-      {% endif %}
-      <form class="navbar-form navbar-left" action="/home/" method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-          <input type="text" name="name" class="form-control" placeholder="Search playlist">
-        </div>
-        <button type="submit" class="btn btn-default">Seacrh</button>
-      </form>  
-    </ul>
-  </div>
-</nav>
+  </nav>
 
+<div class="container" style="margin-top: 50px;">
 {% block content %}
 
 {% endblock %}
+</div>
 
 </body>
 </html>
