home page output content
playlists can be extracted from database with easy sorting and be shown in home page

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -55,7 +55,7 @@
           <form class="navbar-form navbar-left" action="/home/" method="POST">
             {% csrf_token %}
             <div class="form-group">
-              <input type="text" name="name" class="form-control" placeholder="Search playlist">
+              <input type="text" required name="playlists_keys" class="form-control" placeholder="Search playlist">
             </div>
             <button type="submit" class="btn btn-default">Seacrh</button>
           </form>  
