my playlists works well
also form and view for new links added, it's time for edit playlist and new links functionality

--- a/home/templates/add_link.html
+++ b/home/templates/add_link.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <h3 class="h3" id="head_banner">{% trans "Add playlist" %}</h3>
+    <h3 class="h3" id="head_banner">{% trans "Add link" %}</h3>
 
     <h5 class="h5" id="head_banner">{% trans "" %}</h5>
     <form action="{% url 'add_new_playlist_n' %}" method="POST">
