--- a/home/templates/add_link.html
+++ b/home/templates/add_link.html
@@ -6,7 +6,7 @@
     <h3 class="h3" id="head_banner">{% trans "Add link" %}</h3>
 
     <h5 class="h5" id="head_banner">{% trans "" %}</h5>
-    <form action="{% url 'add_new_playlist_n' %}" method="POST">
+    <form action="{% url 'add_new_link_n' pk %}" method="POST">
         {% csrf_token %}
         {% for field in form %}
           <div class="form-group">
