--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1,4 +1,4 @@
-.panel-footer i.glyphicon { display: inline; font-size: 1.125em; cursor: pointer; }
-.panel-footer i.glyphicon-thumbs-up { color: #1abc9c; }
-.panel-footer i.glyphicon-thumbs-down { color: #e74c3c; padding-left: 5px; }
+i.glyphicon { display: inline; font-size: 1.125em; cursor: pointer; }
+i.glyphicon-thumbs-up { color: #1abc9c; }
+i.glyphicon-thumbs-down { color: #e74c3c; padding-left: 5px; }
 .panel-footer div {width: 15px; display: inline; color: #34495e; text-align: center; background-color: transparent !important;}	
