--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -67,6 +67,22 @@
                 dataType: 'json',
             });
         });
+        $("#inherite_playlist" + "{{ playlist.id }}").click(function() {
+            $.ajax({
+                type: 'GET',
+                async: true,
+                url: "{% url 'inherite_ajax_n' playlist.id %}",
+                success: function(data) {
+                  if (data['response'] == 'inhereted successfuly'){
+                    document.getElementById("inherite_playlist" + "{{ playlist.id }}").innerHTML='<img src="https://img.icons8.com/flat_round/23/000000/star--v1.png"/>';
+                  }
+                  else {
+                    document.getElementById("inherite_playlist" + "{{ playlist.id }}").innerHTML='<img src="https://img.icons8.com/ios/16/000000/star.png"/>';
+                  }
+                },
+                dataType: 'json',
+            });
+        });
     });
   </script>
 
@@ -77,7 +93,13 @@
       <div class="pull-right"><a href="{% url 'home_target_n' 'main' %}">edit</a></div>
       <div class="pull-right" style="padding-right: 15px;"><a href="{% url 'add_new_link_n' playlist.id %}">add link</a></div>
     {% else %}
-      <div class="pull-right"><img src="https://img.icons8.com/fluent/23/000000/star.png"/></div>
+      <div class="pull-right" id="inherite_playlist{{ playlist.id }}">
+      {% if playlist.id in inherited_playlists %}
+        <img src="https://img.icons8.com/flat_round/23/000000/star--v1.png"/>
+      {% else %}
+        <img src="https://img.icons8.com/ios/16/000000/star.png"/>
+      {% endif %}
+      </div>
     {% endif %}
 
     <h3 style="margin-top: 0px;">{{ playlist.title }}</h3>
