--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -92,7 +92,7 @@
     {% if playlist.author_id == user.id %}
       <div class="pull-right"><a href="{% url 'home_target_n' 'main' %}">edit</a></div>
       <div class="pull-right" style="padding-right: 15px;"><a href="{% url 'add_new_link_n' playlist.id %}">add link</a></div>
-    {% else %}
+    {% elif user.id %}
       <div class="pull-right" id="inherite_playlist{{ playlist.id }}">
       {% if playlist.id in inherited_playlists %}
         <img src="https://img.icons8.com/flat_round/23/000000/star--v1.png"/>
