Several bugs fixed

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -41,7 +41,7 @@
   </div>
   {% else %}
   <div style="margin-bottom: 10px;">
-    <input id="show_intro" type="checkbox" name="remember"><span> Show introductory information anymore</span>
+    <input id="show_intro" type="checkbox" name="remember"><span> Show introductory information</span>
   </div>
   {% endif %}
   
