--- a/home/templates/edit_playlist.html
+++ b/home/templates/edit_playlist.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h3 class="h3" id="head_banner">{% trans "Edit playlist" %}</h3>
-
+    <div id="links_to_add">
     <h5 class="h5" id="head_banner">{% trans "" %}</h5>
     <form action="{% url 'edit_playlist_n' pk %}" method="POST">
         {% csrf_token %}
@@ -14,6 +14,74 @@
             {{ field }}
           </div>
         {% endfor %}
+        <input v-model="all_links" type="hidden" name="links">
         <button type="submit" class="btn btn-default">Save</button>
     </form>
+
+
+        <form v-on:submit.prevent="addNewLink">
+          <label for="new_link">Add new link</label>
+          <input
+            v-model="newLink"
+            id="new_link"
+            placeholder="New link">
+          <button>Добавить</button>
+        </form>
+        <ul>
+          <li
+            v-for="todo in todos"
+          >[[ todo.link ]] <input v-model="todo.description" placeholder="Add description"><input v-model="todo.check" type="checkbox"><button @click="deleteLink(todo.id)">Delete</button></li>
+        </ul>
+    </div>
+
+
+    <script>
+      obj = new Vue({
+      delimiters: ["[[", "]]"],
+      el: '#links_to_add',
+      data: {
+          newLink: '',
+          todos: [],
+          nextTodoId: 1
+      },
+      methods: {
+          addNewLink: function () {
+            this.todos.push({
+                id: this.nextTodoId++,
+                link: this.newLink,
+                description: '',
+                check: false,
+            })
+            this.newLink = ''
+          },
+
+          deleteLink(val) {
+            for (var i = 0; i < this.todos.length; i++)
+              if (this.todos[i].id === val) 
+              {
+                  this.todos.splice(i,1);
+                  break;
+              }
+          }
+      },
+      computed: {
+        all_links: function() {
+          var result = [];
+          for (var i = 0; i < this.todos.length; i++)
+              result.push("\
+                link:" + this.todos[i].link + ",\
+                description:" + this.todos[i].description + ",\
+                check:" + this.todos[i].check + ",\
+              ");
+          return result
+        }
+      }
+      })
+      {% for link in links %}
+        var link = '{{ link.link }}'
+        var description = '{{ link.description }}'
+        var check = '{{ link.check_relevance }}' == "True"
+        obj.todos.push({link: link, description: description, check: check})
+      {% endfor %}
+    </script>
 {% endblock %} 
